--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
+
+* {
   margin: 0;
+  padding: 0;
+  font-family: "Cairo";
+}
+
+html {
+  background: #1b2021 !important;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #1B2021;
+  height: fit-content;
+}
+
+#root {
+  background: #1B2021;
+  height: fit-content;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+    background: #1B2021;
+}
+
+html::-webkit-scrollbar {
+  width: 11px;
+  height: 0.4rem;
+}
+
+html::-webkit-scrollbar-track {
+  background: rgb(18, 18, 18);
+  border-radius: 20px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: rgb(134 234 170);
+  border-radius: 20px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background: #46bf73;
+}
+
+.tv::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.4rem;
+}
+
+.tv::-webkit-scrollbar-track {
+  background: rgb(18, 18, 18);
+  border-radius: 20px;
+}
+
+.tv::-webkit-scrollbar-thumb {
+  background: rgb(134 234 170);
+  border-radius: 20px;
+}
+
+.tv::-webkit-scrollbar-thumb:hover {
+  background: #46bf73;
 }
